# r1-computer-use

./: README.md  pyproject.toml
data/: comp_thoughts.jsonl
scripts/: thoughts.py
src/r1_computer_use/: __init__.py
